# agentic-3d

./: .gitignore  README.md  api_utils.py  api_utils_openai.py  autogen_utils.py  config.py  main.py  main_autogen.py  main_autogen_tool_call.py  metrics_by_object.csv  scad_utils.py  test.py
.cache/42/: cache.db-shm  cache.db-wal
agentic-3d/: pyproject.toml
agentic-3d/agentic_3d/: __init__.py  _constants.py  agents.py  prompter.py  strategy.py  utils.py  workflow.py
agentic-3d/envs/: conda_agentic_3d_env.yml  conda_env_final.yml  poetry_requirements.txt
agentic-3d/models/: workflow_scene_0.scad  workflow_scene_1.scad  workflow_scene_10.scad  workflow_scene_2.scad  workflow_scene_3.scad  workflow_scene_4.scad  workflow_scene_5.scad  workflow_scene_6.scad  workflow_scene_7.scad  workflow_scene_8.scad  workflow_scene_9.scad
agentic-3d/notebooks/: interface.ipynb
agentic-3d/notebooks/.cache/41/: cache.db
