[tool.poetry]
name = "agentic-3d"
version = "0.1.0"
description = ""
authors = ["Reet Mishra <reet.mishra@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pydantic = "^2.9.2"
openai = "^1.54.3"
python-dotenv = "^1.0.1"
autogen-agentchat = {version = ">=0.2,<1.0", extras = ["lmm"]}
pyautogen = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
